--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -31,6 +31,7 @@ on boot
     chown cameraserver root /sys/class/thermal/thermal_message/boost
     chmod 0664 /sys/class/thermal/thermal_message/boost
 
+    # Smart Charging
     chown system system /sys/class/power_supply/battery/input_suspend
     chmod 0666 /sys/class/power_supply/battery/input_suspend
 
